[package]
name = "moly"
version = "0.1.0"
authors = ["chili-b <dexter.gaonshatford@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hole_punch = { path = "../hole_punch" }
confy = "0.4"
serde = { version = "1.0", features = ["derive"] }

iui = "0.3"
